enhanced layer support in glyphView
font wider layer control widget

cleaning up after first round of review #17

fix 2 typos

Place LayerSetWidget controls inside of InspectorWindow

default color swatch is a red diagonal with white background

LayerSetWidget to LayerSetList, changed the superclass as well

remove unused import

--- a/Lib/defconQt/icons_db.qrc
+++ b/Lib/defconQt/icons_db.qrc
@@ -5,6 +5,7 @@
 	<file>resources/curve.svg</file>
 	<file>resources/cut.svg</file>
 	<file>resources/ruler.svg</file>
+	<file>resources/defaultColor.svg</file>
     <file>resources/settings.svg</file>
 </qresource>
 </RCC>
